--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.0",
     "next": "14.0.4",
+    "permitio": "^2.2.0",
     "react": "^18",
     "react-dom": "^18"
   },
